--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -2,4 +2,5 @@ eclipse.preferences.version=1
 encoding//WebRoot/WEB-INF/pages/base/user/list/3.jsp=UTF-8
 encoding//WebRoot/WEB-INF/pages/test.jsp=UTF-8
 encoding//WebRoot/resource/baiduMap/MapNode.js=UTF-8
+encoding//src/jdbc.properties=UTF-8
 encoding/<project>=UTF-8
