--- a/src/jdbc.properties
+++ b/src/jdbc.properties
@@ -9,7 +9,7 @@ jdbc.minIdle=1
 
 
 jdbc.driverClassName=com.mysql.jdbc.Driver
-#jdbc.url=jdbc:mysql://localhost:3306/amm?useUnicode\=true&charterEncoding\=utf-8
-jdbc.url=jdbc:mysql://112.74.100.134:3306/amm?useUnicode=true&charterEncoding=utf-8
+jdbc.url=jdbc:mysql://localhost:3306/amm?useUnicode\=true&charterEncoding\=utf-8
+#jdbc.url=jdbc:mysql://112.74.100.134:3306/amm?useUnicode=true&charterEncoding=utf-8
 jdbc.username=root
 jdbc.password=28b21c1cfd
